<resources>
    <string name="app_name">Poupaai</string>

    <!-- Strings used for initials fragments -->
    <string name="initial_title_to_enter">Login</string>
    <string name="initial_title_register">Cadastro</string>
    <string name="name_hint">Nome</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="btn_to_enter">Entrar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="text_to_register">Não tem uma conta?\nClique aqui para se cadastrar</string>
    <string name="text_to_login">Já tem uma conta?\nClique aqui para entrar</string>
    <string name="btn_take_picture">Tirar uma foto</string>
    <string name="btn_choose_galery">Escolher da galeria</string>

    <!-- Strings used for main navigation -->
    <string name="may_expenses_monthly">Minhas despesas mensais</string>
    <string name="my_expenses">Minhas despesas</string>
    <string name="friends">Amigos</string>
    <string name="add_expenses">Adicionar despesa</string>
    <string name="add_friends">Adicionar amigos</string>
    <string name="my_profile">Meu perfil</string>

    <!-- Strings used for form to my expenses monthly -->
    <string name="month_name">Nome do mês</string>
    <string name="month_year">Ano do mês</string>
    <string name="total_expenses_of_month">Total de despesas do mês</string>

    <!-- Strings used for form to my expenses -->
    <string name="expense_day">Dia da despesa</string>
    <string name="expense_month_name">de nome do mês</string>
    <string name="expense_value">Valor da despesa</string>
    <string name="expense_category">Categoria da despesa</string>
    <string name="expense_description">Descrição da despesa</string>
    <string name="expense_status">Status da despesa</string>

    <!-- Strings used for form to add expenses -->
    <string name="expense_day_label">Dia</string>
    <string name="expense_month_label">Mês</string>
    <string name="expense_year_label">Ano</string>
    <string name="expense_category_label">Categoria</string>
    <string name="expense_value_label">Valor</string>
    <string name="expense_description_label">Descrição</string>
    <string name="expense_day_hint">dia</string>
    <string name="expense_month_hint">mês</string>
    <string name="expense_year_hint">ano</string>
    <string name="expense_category_hint">adicionar categoria</string>
    <string name="expense_value_hint">R$ 00,00</string>
    <string name="expense_description_hint">descrição...</string>
    <string name="btn_remove_expense">Excluir despesa</string>
    <string name="btn_save_expense">Salvar despesa</string>
    <string name="friend_name">Nome do amigo</string>
    <string-array name="expense_status_array">
        <item>Escolha um status</item>
        <item>Pago</item>
        <item>Pendente</item>
        <item>Atrasado</item>
        <item>Cancelado</item>
    </string-array>

    <!-- Strings used for form to add friends -->
    <string name="email_friend_label">Email</string>
    <string name="email_friend_hint">Email que deseja adicionar como amigo...</string>
    <string name="btn_send_friend_request">Enviar solicitação de amizade</string>
    <string name="btn_remove_friend">Remover amigo</string>

    <!-- Strings used for form to notifications -->
    <string name="notifications">Notificações</string>
    <string name="notification_name">Pedido de amizade</string>
    <string name="notification_message">Mensagem da notificação</string>
    <string name="notification">Notificação</string>
    <string name="btn_accepted">Aceitar</string>
    <string name="btn_refused">Recusar</string>

    <!-- Strings used for form to profile -->
    <string name="my_name_label">Meu nome de usuário</string>
    <string name="my_email_label">Meu e-mail</string>
    <string name="my_new_password_label">Nova senha</string>
    <string name="my_new_password_hint">Digite sua nova senha</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_remove_account">Excluir conta</string>
</resources>