<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".views.FragmentNotification">

    <TextView
        android:id="@+id/tvNotificationName"
        android:text="@string/notification_name"
        style="@style/TextView"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvNotificationMessage"
        android:text="@string/notification_message"
        style="@style/TextView"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tvNotificationName"
        app:layout_constraintTop_toBottomOf="@id/tvNotificationName"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAcceptFriendRequest"
        style="@style/Button"
        android:text="@string/btn_accepted"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotificationMessage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRefusedFriendRequest"
        style="@style/ButtonNeutral"
        android:text="@string/btn_refused"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/btnAcceptFriendRequest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>