<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FragmentAddFriends">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvFriendEmailLabel"
            android:text="@string/email_friend_label"
            style="@style/TextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/edtFriendEmail"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/edtFriendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_friend_hint"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFriendEmailLabel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendFriendRequest"
            style="@style/Button"
            android:text="@string/btn_send_friend_request"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtFriendEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRemoveFriendRequest"
            style="@style/ButtonNeutral"
            android:text="@string/btn_remove_friend"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/btnSendFriendRequest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>